--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,19 @@
 # Built with Jekyll 3.6.0
 
 # Setup
-title:               Ed.
-tagline:             'a jekyll theme for minimal editions'
-description:         'Ed is a Jekyll theme designed for textual editors based on minimal computing principles, and focused on legibility and flexibility.'
-url:                 'http://minicomp.github.io'
-baseurl:             '/ed'
+title:               _pi_'s blog
+tagline:             '_pi_''s technology blog'
+description:         '_pi_''s technology blog. Some stuff about Linux, VRChat and Shaders. Somtimes all of the above.'
+url:                 'https://blog.pimaker.at'
+baseurl:             '/'
 
 # About/contact
 author:
-  name:              Alex Gil
-  url:               https://twitter.com/elotroalex
-  email:             colibri.alex@gmail.com
+  name:              _pi_
+  url:               https://pimaker.at
 
 # Color scheme. Options: red, orange, magenta, cyan, blue, brown
-color-scheme:
+color-scheme: blue
 
 # Permalinks
 permalink: pretty
