--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 # Setup
 title:               _pi_'s blog
-tagline:             '_pi_''s technology blog'
-description:         '_pi_''s technology blog. Some stuff about Linux, VRChat and Shaders. Somtimes all of the above.'
+tagline:             'cursed technology stuff'
+description:         'PiMaker/_pi_/Stefan''s technology blog. Sometimes about Linux, VRChat or Shaders. Somtimes about all of the above.'
 url:                 'https://blog.pimaker.at'
 baseurl:             '/'
 
