--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title:               _pi_'s blog
 tagline:             'cursed technology stuff'
 description:         'PiMaker / _pi_ / Stefan''s technology blog. Sometimes about Linux, VRChat or Shaders. Somtimes about all of the above.'
 url:                 'https://blog.pimaker.at'
-baseurl:             '/assets/'
+baseurl:             ''
 
 # About/contact
 author:
